# ptex

./: .gitignore  export.py  make_log.txt  pymake.py  refresh.py  tree_err.txt
iff_files/: convert_format.py
ptx_files/: all_black.ptx  mask_black_125.ptx  mask_black_27.ptx  mask_black_64.ptx  mask_dot.ptx
ptx_in/: abt.ptx  awt.ptx  hab.ptx
ptx_out/: Head.ptx  Head_ch.ptx  Head_sparse.ptx  mixt.ptx
src/tests/: CMakeLists.txt  ptxtransfer.cpp  ptxtransfer_original.cpp  ptxtransfer_v1.cpp  ptxtransfer_v2.cpp  ptxtransfer_v3.cpp  wtest.cpp  wtest_plane.cpp  wtest_plane_v1.cpp
src/utils/: ptxinfo.cpp
